--- a/winhttp/winhttp.vcxproj
+++ b/winhttp/winhttp.vcxproj
@@ -18,12 +18,26 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="IHandle.h" />
+    <ClInclude Include="Winhttp.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="IHandle.cpp" />
+    <ClCompile Include="Winhttp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\W32Module\W32Module.vcxproj">
+      <Project>{0ccbe62c-f8a9-4bef-9993-d11ad4bb9298}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{6381b044-0a3a-458d-98fb-88258e2fe82a}</ProjectGuid>
-    <RootNamespace>nlm</RootNamespace>
+    <ProjectGuid>{64aa7ab3-2a7f-4cd6-aefb-7437208b823d}</ProjectGuid>
+    <RootNamespace>winhttp</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>mwinhttp</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -112,8 +126,8 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -131,8 +145,8 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -142,17 +156,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="nlm.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\W32Module\W32Module.vcxproj">
-      <Project>{0ccbe62c-f8a9-4bef-9993-d11ad4bb9298}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Nlm.hpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
