--- a/w32.vcxproj
+++ b/w32.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\Nlm;$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -120,7 +120,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\Nlm;$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\W32Module;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -134,11 +134,17 @@
     <ClCompile Include="w32.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="nla\nla.vcxproj">
+      <Project>{75b42f84-418d-4121-841a-79a02ae8ba76}</Project>
+    </ProjectReference>
     <ProjectReference Include="nlm\nlm.vcxproj">
       <Project>{6381b044-0a3a-458d-98fb-88258e2fe82a}</Project>
     </ProjectReference>
     <ProjectReference Include="W32Module\W32Module.vcxproj">
       <Project>{0ccbe62c-f8a9-4bef-9993-d11ad4bb9298}</Project>
+    </ProjectReference>
+    <ProjectReference Include="winhttp\winhttp.vcxproj">
+      <Project>{64aa7ab3-2a7f-4cd6-aefb-7437208b823d}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
